// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NotificationBarStatusIconComponent if xpage status is EditingSharedContainers should render alert-circle-outline 1`] = `
<div
  id="root33"
>
  <mat-icon>
    alert-circle-outline
  </mat-icon>
</div>
`;

exports[`NotificationBarStatusIconComponent if xpage status is Locked should render lock-outline 1`] = `
<div
  id="root37"
>
  <mat-icon>
    lock-outline
  </mat-icon>
</div>
`;

exports[`NotificationBarStatusIconComponent if xpage status is NotPartOfProject should render xpage 1`] = `
<div
  id="root21"
>
  <mat-icon>
    xpage
  </mat-icon>
</div>
`;

exports[`NotificationBarStatusIconComponent if xpage status is Offline should render minus-circle-outline 1`] = `
<div
  id="root3"
>
  <mat-icon>
    minus-circle-outline
  </mat-icon>
</div>
`;

exports[`NotificationBarStatusIconComponent if xpage status is PreviousVersion should render alert-circle-outline 1`] = `
<div
  id="root35"
>
  <mat-icon>
    alert-circle-outline
  </mat-icon>
</div>
`;

exports[`NotificationBarStatusIconComponent if xpage status is ProjectInProgress should render minus-circle-outline 1`] = `
<div
  id="root23"
>
  <mat-icon>
    minus-circle-outline
  </mat-icon>
</div>
`;

exports[`NotificationBarStatusIconComponent if xpage status is ProjectInReview should render comment-processing-outline 1`] = `
<div
  id="root25"
>
  <mat-icon>
    comment-processing-outline
  </mat-icon>
</div>
`;

exports[`NotificationBarStatusIconComponent if xpage status is ProjectPageApproved should render comment-check-outline 1`] = `
<div
  id="root27"
>
  <mat-icon>
    comment-check-outline
  </mat-icon>
</div>
`;

exports[`NotificationBarStatusIconComponent if xpage status is ProjectPageRejected should render comment-remove-outline 1`] = `
<div
  id="root29"
>
  <mat-icon>
    comment-remove-outline
  </mat-icon>
</div>
`;

exports[`NotificationBarStatusIconComponent if xpage status is ProjectRunning should render xpage 1`] = `
<div
  id="root31"
>
  <mat-icon>
    xpage
  </mat-icon>
</div>
`;

exports[`NotificationBarStatusIconComponent if xpage status is PublicationRequest should render comment-processing-outline 1`] = `
<div
  id="root7"
>
  <mat-icon>
    comment-processing-outline
  </mat-icon>
</div>
`;

exports[`NotificationBarStatusIconComponent if xpage status is Published should render xpage 1`] = `
<div
  id="root1"
>
  <mat-icon>
    xpage
  </mat-icon>
</div>
`;

exports[`NotificationBarStatusIconComponent if xpage status is RejectedRequest should render comment-remove-outline 1`] = `
<div
  id="root9"
>
  <mat-icon>
    comment-remove-outline
  </mat-icon>
</div>
`;

exports[`NotificationBarStatusIconComponent if xpage status is ScheduledPublication should render calendar-clock 1`] = `
<div
  id="root13"
>
  <mat-icon>
    calendar-clock
  </mat-icon>
</div>
`;

exports[`NotificationBarStatusIconComponent if xpage status is ScheduledPublicationRequest should render comment-processing-outline 1`] = `
<div
  id="root17"
>
  <mat-icon>
    comment-processing-outline
  </mat-icon>
</div>
`;

exports[`NotificationBarStatusIconComponent if xpage status is ScheduledToTakeOffline should render calendar-clock 1`] = `
<div
  id="root15"
>
  <mat-icon>
    calendar-clock
  </mat-icon>
</div>
`;

exports[`NotificationBarStatusIconComponent if xpage status is ScheduledToTakeOfflineRequest should render comment-processing-outline 1`] = `
<div
  id="root19"
>
  <mat-icon>
    comment-processing-outline
  </mat-icon>
</div>
`;

exports[`NotificationBarStatusIconComponent if xpage status is TakeOfflineRequest should render comment-processing-outline 1`] = `
<div
  id="root11"
>
  <mat-icon>
    comment-processing-outline
  </mat-icon>
</div>
`;

exports[`NotificationBarStatusIconComponent if xpage status is UnpublishedChanges should render alert-outline 1`] = `
<div
  id="root5"
>
  <mat-icon>
    alert-outline
  </mat-icon>
</div>
`;
